--- a/res/layout/chance_fragment.xml
+++ b/res/layout/chance_fragment.xml
@@ -41,11 +41,8 @@
     <ListView
         android:id="@+id/lv_chance"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:cacheColorHint="#000000"
-        android:divider="@null"
-        android:layout_marginBottom="20dp"
-        android:dividerHeight="1dp" >
+        android:layout_height="match_parent"
+        >
     </ListView>
 
 </LinearLayout>
