--- a/res/layout/chance_list_item.xml
+++ b/res/layout/chance_list_item.xml
@@ -1,58 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="10dp"
+    android:layout_gravity="center"
     android:paddingLeft="5dp"
     android:paddingRight="5dp"
-    android:orientation="vertical" >
+    android:paddingTop="20dp"
+    android:paddingBottom="20dp" >
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/relativeLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/c13_08"
-        android:orientation="vertical" >
+        android:layout_below="@+id/tv_chance_title"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@+id/iv_chance_rect" >
 
-        <ImageView
-            android:id="@+id/iv_chance_banner"
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="5dp"
-            android:scaleType="center"
-             />
-        
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/tv_chance_address"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp" >
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/tv_chance_time"
+            android:singleLine="true"
+            android:text="北京"
+            android:textColor="@color/color_4"
+            android:textSize="@dimen/new_size_1" />
 
-            <TextView
-                android:id="@+id/tv_chance_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:layout_toLeftOf="@+id/tv_chance_time"
-                android:text="今年杨坤20岁演唱会"
-                android:singleLine="true"
-                android:textColor="@color/main_red"
-                android:textSize="@dimen/new_size_2" />
+        <TextView
+            android:id="@+id/tv_chance_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:text="报名截止时间：2104年12月6日"
+            android:textColor="@color/color_4"
+            android:textSize="@dimen/new_size_1" />
+    </RelativeLayout>
 
-            <TextView
-                android:id="@+id/tv_chance_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                 android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:text="报名截止时间：2104年12月6日"
-                android:textColor="@color/color_4"
-                android:textSize="@dimen/new_size_1" />
+    <TextView
+        android:id="@+id/tv_chance_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/iv_chance_rect"
+        android:layout_marginLeft="10dp"
+        android:text="北京"
+        android:textColor="@color/color_2"
+        android:textSize="@dimen/new_size_2" />
 
-        </RelativeLayout>
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/iv_chance_rect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="11dp"
+        android:background="@drawable/chance_03" />
 
-</LinearLayout>
+</RelativeLayout>
