--- a/res/layout/my_yirenwork_item.xml
+++ b/res/layout/my_yirenwork_item.xml
@@ -71,7 +71,7 @@
                     android:textColor="@color/color_3" />
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/tvjiesuan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
@@ -91,7 +91,7 @@
                     android:textColor="@color/color_3" />
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/tvjiage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
@@ -107,7 +107,7 @@
                 android:layout_height="wrap_content" >
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/tvdizhi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
@@ -129,7 +129,7 @@
                     android:textColor="@color/color_3" />
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/tvriqi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
