--- a/res/layout/my_fuwu_item.xml
+++ b/res/layout/my_fuwu_item.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/color_2"
             android:textSize="@dimen/new_size_4"
-            android:text="" />
+            android:text="+" />
 
     </LinearLayout>
    
