--- a/res/layout/near_yirenxiangqingmobanhead.xml
+++ b/res/layout/near_yirenxiangqingmobanhead.xml
@@ -54,19 +54,19 @@
                     android:gravity="center_vertical" >
 
                     <ImageView
-                        android:id="@+id/imageView6"
+                        android:id="@+id/imgsex1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:src="@drawable/f_05" />
 
                     <TextView
-                        android:id="@+id/textView1"
+                        android:id="@+id/tvage1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
-                        android:text="21"
+                        android:text=""
             android:textSize="@dimen/new_size_3"
                         android:textColor="@color/white" />
                 </LinearLayout>
