--- a/res/layout/near_yirenzuopin_item.xml
+++ b/res/layout/near_yirenzuopin_item.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/lroot"
     android:background="@color/main_white"
     android:gravity="center_vertical" >
 
@@ -10,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:background="@color/main_white"
-        android:src="@drawable/f10_49" />
+        android:src="@drawable/d11_03" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -72,7 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/main_white"
-            android:text="一夜惊喜"
+            android:text=""
             android:textColor="@color/color_3"
             android:textSize="@dimen/new_size_3" />
 
@@ -81,7 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/main_white"
-            android:text="米雪"
+            android:text=""
             android:textColor="@color/color_3"
             android:textSize="@dimen/new_size_3" />
 
@@ -90,7 +91,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/main_white"
-            android:text="2013年8月9日"
+            android:text=""
             android:textColor="@color/color_3"
             android:textSize="@dimen/new_size_3" />
     </LinearLayout>
