--- a/res/layout/my_renzheng.xml
+++ b/res/layout/my_renzheng.xml
@@ -148,7 +148,19 @@
 
         </LinearLayout>
 
-        <LinearLayout
+        <ScrollView
+            android:id="@+id/scrollView1"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="vertical" >
+
+                <LinearLayout
             android:id="@+id/l2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -171,14 +183,14 @@
                     android:text="参加项目全称:" />
 
                 <EditText
-                    android:id="@+id/EditText02"
+                    android:id="@+id/etitem"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="3"
                     android:background="@null"
                     android:textColor="@color/color_4"
-            			android:textSize="@dimen/new_size_3"
+            		android:textSize="@dimen/new_size_3"
                     android:hint="必填" />
             </LinearLayout>
 
@@ -196,42 +208,15 @@
             			android:textSize="@dimen/new_size_3"
                     android:text="T台照片/片场照片:" />
 
-                <EditText
-                    android:id="@+id/EditText01"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="3"
-                    android:background="@null"
-                    android:textColor="@color/color_4"
-            			android:textSize="@dimen/new_size_3"
-                    android:hint="必填" />
             </LinearLayout>
 
-            <HorizontalScrollView
-                android:id="@+id/horizontalScrollView1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
 
-                <LinearLayout
+                <com.timetalent.client.ui.view.RenzhengEditPicturesLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/piclay"
                     android:orientation="horizontal" >
-
-                    <ImageView
-                        android:id="@+id/imageView1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/d10_16" />
-
-                    <ImageView
-                        android:id="@+id/imageView2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/d11_03" />
-
-                </LinearLayout>
-            </HorizontalScrollView>
+                </com.timetalent.client.ui.view.RenzhengEditPicturesLayout>
 
 			<LinearLayout
 			    android:layout_width="match_parent"
@@ -242,19 +227,311 @@
 
         	</LinearLayout>
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:drawableLeft="@drawable/acc_add"
-                android:gravity="center"
-                android:textColor="@color/color_2"
-            			android:textSize="@dimen/new_size_3"
-                android:text="添加更多" />
 
         </LinearLayout>
+        
+                
+                
+                <LinearLayout
+            android:id="@+id/l5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:visibility="gone" >
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp" >
+
+                <TextView
+                    android:id="@+id/TextView02"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:textColor="@color/color_2"
+            			android:textSize="@dimen/new_size_3"
+                    android:text="参加项目全称:" />
+
+                <EditText
+                    android:id="@+id/etitem"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="3"
+                    android:background="@null"
+                    android:textColor="@color/color_4"
+            		android:textSize="@dimen/new_size_3"
+                    android:hint="必填" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp" >
+
+                <TextView
+                    android:id="@+id/TextView01"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:textColor="@color/color_2"
+            			android:textSize="@dimen/new_size_3"
+                    android:text="T台照片/片场照片:" />
+
+            </LinearLayout>
+
+
+                <com.timetalent.client.ui.view.RenzhengEditPicturesLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/piclay"
+                    android:orientation="horizontal" >
+                </com.timetalent.client.ui.view.RenzhengEditPicturesLayout>
+
+			<LinearLayout
+			    android:layout_width="match_parent"
+			    android:layout_height="1dp"
+			    android:layout_marginTop="10dp"
+			    android:background="@color/spilt_line_color"
+			    android:orientation="vertical" >
+
+        	</LinearLayout>
+
+
+        </LinearLayout>
+        
+                
+                <LinearLayout
+            android:id="@+id/l6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:visibility="gone" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp" >
+
+                <TextView
+                    android:id="@+id/TextView02"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:textColor="@color/color_2"
+            			android:textSize="@dimen/new_size_3"
+                    android:text="参加项目全称:" />
+
+                <EditText
+                    android:id="@+id/etitem"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="3"
+                    android:background="@null"
+                    android:textColor="@color/color_4"
+            		android:textSize="@dimen/new_size_3"
+                    android:hint="必填" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp" >
+
+                <TextView
+                    android:id="@+id/TextView01"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:textColor="@color/color_2"
+            			android:textSize="@dimen/new_size_3"
+                    android:text="T台照片/片场照片:" />
+
+            </LinearLayout>
+
+
+                <com.timetalent.client.ui.view.RenzhengEditPicturesLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/piclay"
+                    android:orientation="horizontal" >
+                </com.timetalent.client.ui.view.RenzhengEditPicturesLayout>
+
+			<LinearLayout
+			    android:layout_width="match_parent"
+			    android:layout_height="1dp"
+			    android:layout_marginTop="10dp"
+			    android:background="@color/spilt_line_color"
+			    android:orientation="vertical" >
+
+        	</LinearLayout>
+
+
+        </LinearLayout>
+        
+                
+                <LinearLayout
+            android:id="@+id/l7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:visibility="gone" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp" >
+
+                <TextView
+                    android:id="@+id/TextView02"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:textColor="@color/color_2"
+            			android:textSize="@dimen/new_size_3"
+                    android:text="参加项目全称:" />
+
+                <EditText
+                    android:id="@+id/etitem"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="3"
+                    android:background="@null"
+                    android:textColor="@color/color_4"
+            		android:textSize="@dimen/new_size_3"
+                    android:hint="必填" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp" >
+
+                <TextView
+                    android:id="@+id/TextView01"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:textColor="@color/color_2"
+            			android:textSize="@dimen/new_size_3"
+                    android:text="T台照片/片场照片:" />
+
+            </LinearLayout>
+
+
+                <com.timetalent.client.ui.view.RenzhengEditPicturesLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/piclay"
+                    android:orientation="horizontal" >
+                </com.timetalent.client.ui.view.RenzhengEditPicturesLayout>
+
+			<LinearLayout
+			    android:layout_width="match_parent"
+			    android:layout_height="1dp"
+			    android:layout_marginTop="10dp"
+			    android:background="@color/spilt_line_color"
+			    android:orientation="vertical" >
+
+        	</LinearLayout>
+
+
+        </LinearLayout>
+        
+                <LinearLayout
+            android:id="@+id/l8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:visibility="gone" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp" >
+
+                <TextView
+                    android:id="@+id/TextView02"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:textColor="@color/color_2"
+            			android:textSize="@dimen/new_size_3"
+                    android:text="参加项目全称:" />
+
+                <EditText
+                    android:id="@+id/etitem"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="3"
+                    android:background="@null"
+                    android:textColor="@color/color_4"
+            		android:textSize="@dimen/new_size_3"
+                    android:hint="必填" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp" >
+
+                <TextView
+                    android:id="@+id/TextView01"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:textColor="@color/color_2"
+            			android:textSize="@dimen/new_size_3"
+                    android:text="T台照片/片场照片:" />
+
+            </LinearLayout>
+
+
+                <com.timetalent.client.ui.view.RenzhengEditPicturesLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/piclay"
+                    android:orientation="horizontal" >
+                </com.timetalent.client.ui.view.RenzhengEditPicturesLayout>
+
+			<LinearLayout
+			    android:layout_width="match_parent"
+			    android:layout_height="1dp"
+			    android:layout_marginTop="10dp"
+			    android:background="@color/spilt_line_color"
+			    android:orientation="vertical" >
+
+        	</LinearLayout>
+
+
+        </LinearLayout>
+        
+
+        <TextView
+                android:id="@+id/tvaddmore"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:gravity="center"
+                android:visibility="gone"
+                android:textColor="@color/color_2"
+            			android:textSize="@dimen/new_size_3"
+                android:text="+添加更多" />
+            </LinearLayout>
+        </ScrollView>
         <LinearLayout
             android:id="@+id/l3"
             android:layout_width="match_parent"
@@ -263,7 +540,7 @@
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/tvresult"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
@@ -271,7 +548,7 @@
                 android:layout_marginTop="20dp"
                 android:textColor="@color/color_2"
             			android:textSize="@dimen/new_size_3"
-                android:text="恭喜吴沐熙vicky" />
+                android:text="恭喜" />
 
             <TextView
                 android:id="@+id/textView6"
