--- a/res/layout/lianxikehu.xml
+++ b/res/layout/lianxikehu.xml
@@ -2,13 +2,45 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-	<include
+
+    <include
+        android:layout_weight="1"
         layout="@layout/main_top_layout" />
 
-	<TextView
-	    android:id="@+id/textView1"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:text="联系客户" />
-	
+    <ScrollView
+        android:id="@+id/scrollView1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
+        android:layout_weight="1" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+
+            <EditText
+                android:id="@+id/editText1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColor="@color/color_2"
+        		android:textSize="@dimen/new_size_3"
+        		android:hint="点击输入内容"
+                android:background="@null" >
+				
+                <requestFocus />
+            </EditText>
+
+        </LinearLayout>
+    </ScrollView>
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/btn_red"
+        android:textColor="@color/white"
+        android:textSize="@dimen/new_size_4"
+        android:text="发送" />
+
 </LinearLayout>
