--- a/res/layout/guide_page_one.xml
+++ b/res/layout/guide_page_one.xml
@@ -2,5 +2,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-   android:background="@drawable/first_page">
+   android:background="@drawable/first_page1">
 </RelativeLayout>
