--- a/res/layout/my_main_fans.xml
+++ b/res/layout/my_main_fans.xml
@@ -288,7 +288,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
                     android:background="@color/main_light_white"
-                    android:gravity="center_vertical" >
+                    android:gravity="center_vertical"
+                    android:visibility="gone" >
 
                     <ImageView
                         android:id="@+id/imageView6"
