--- a/res/layout/near_yirenxiangqingmobanhead.xml
+++ b/res/layout/near_yirenxiangqingmobanhead.xml
@@ -552,7 +552,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView04"
+                            android:id="@+id/tvdaiyan"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="@color/color_2"
@@ -592,7 +592,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView02"
+                            android:id="@+id/tvhuojiangjilu"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="@color/color_2"
